// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboard deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "CLIENT_VIEWER "junk" -": "88167626273e59e9",
    "CLIENT_VIEWER "junk" previous_year": "a05e10a68b1a7bcb",
    "CLIENT_VIEWER "last_30_days" -": "92211518f762d9ea",
    "CLIENT_VIEWER "last_30_days" previous_year": "b87de696f55c5abe",
    "CLIENT_VIEWER "last_month" -": "e608bcac1a80ae06",
    "CLIENT_VIEWER "last_month" previous_year": "f30cafcd72fbf528",
    "CLIENT_VIEWER ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "CLIENT_VIEWER undefined -": "92211518f762d9ea",
    "CLIENT_VIEWER undefined previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "INTERNAL_ADMIN "junk" -": "88167626273e59e9",
    "INTERNAL_ADMIN "junk" previous_year": "a05e10a68b1a7bcb",
    "INTERNAL_ADMIN "last_30_days" -": "92211518f762d9ea",
    "INTERNAL_ADMIN "last_30_days" previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "last_month" -": "e608bcac1a80ae06",
    "INTERNAL_ADMIN "last_month" previous_year": "f30cafcd72fbf528",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "INTERNAL_ADMIN undefined -": "92211518f762d9ea",
    "INTERNAL_ADMIN undefined previous_year": "b87de696f55c5abe",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "CLIENT_VIEWER "junk" -": "88167626273e59e9",
    "CLIENT_VIEWER "junk" previous_year": "a05e10a68b1a7bcb",
    "CLIENT_VIEWER "last_30_days" -": "92211518f762d9ea",
    "CLIENT_VIEWER "last_30_days" previous_year": "b87de696f55c5abe",
    "CLIENT_VIEWER "last_month" -": "e608bcac1a80ae06",
    "CLIENT_VIEWER "last_month" previous_year": "f30cafcd72fbf528",
    "CLIENT_VIEWER ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "CLIENT_VIEWER undefined -": "92211518f762d9ea",
    "CLIENT_VIEWER undefined previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "337a1b529dbd4b19",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "4f8d9e5ba35815ff",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "bcfee9815d81c302",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "1f1139e56a681b2f",
    "INTERNAL_ADMIN "junk" -": "88167626273e59e9",
    "INTERNAL_ADMIN "junk" previous_year": "a05e10a68b1a7bcb",
    "INTERNAL_ADMIN "last_30_days" -": "92211518f762d9ea",
    "INTERNAL_ADMIN "last_30_days" previous_year": "b87de696f55c5abe",
    "INTERNAL_ADMIN "last_month" -": "e608bcac1a80ae06",
    "INTERNAL_ADMIN "last_month" previous_year": "f30cafcd72fbf528",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "9b1c9f1b9fd1aa26",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "e698074d32fa8c12",
    "INTERNAL_ADMIN undefined -": "92211518f762d9ea",
    "INTERNAL_ADMIN undefined previous_year": "b87de696f55c5abe",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "compareValue": null,
                      "value": "last_30_days",
                    },
                    "type": "ReportDateRange",
                  },
                  "fallback": null,
                },
                "type": "react.suspense",
              },
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "Header",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
      },
      "type": "react.fragment",
    },
  },
}
`;

exports[`dashboard spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "b534d8251e49145d",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "8ab2b1238d13c857",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "7cc2e5cf42891a83",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "ebf6ad64787d13a6",
    "CLIENT_VIEWER "junk" -": "577b8e89e8da2ede",
    "CLIENT_VIEWER "junk" previous_year": "52b516c882713636",
    "CLIENT_VIEWER "last_30_days" -": "7a8e287037c32c8e",
    "CLIENT_VIEWER "last_30_days" previous_year": "cba45a1b1b2bc883",
    "CLIENT_VIEWER "last_month" -": "7fa4c9361089b00f",
    "CLIENT_VIEWER "last_month" previous_year": "fcfccce3f5f79d83",
    "CLIENT_VIEWER ["last_30_days","x"] -": "77197bf5e14d1514",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "9c72fe9c9f02f56b",
    "CLIENT_VIEWER health": "7a8e287037c32c8e",
    "CLIENT_VIEWER undefined -": "7a8e287037c32c8e",
    "CLIENT_VIEWER undefined previous_year": "cba45a1b1b2bc883",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "b534d8251e49145d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "8ab2b1238d13c857",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "7cc2e5cf42891a83",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "ebf6ad64787d13a6",
    "INTERNAL_ADMIN "junk" -": "577b8e89e8da2ede",
    "INTERNAL_ADMIN "junk" previous_year": "52b516c882713636",
    "INTERNAL_ADMIN "last_30_days" -": "7a8e287037c32c8e",
    "INTERNAL_ADMIN "last_30_days" previous_year": "cba45a1b1b2bc883",
    "INTERNAL_ADMIN "last_month" -": "7fa4c9361089b00f",
    "INTERNAL_ADMIN "last_month" previous_year": "fcfccce3f5f79d83",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "77197bf5e14d1514",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "9c72fe9c9f02f56b",
    "INTERNAL_ADMIN health": "c62db1c4f426f57b",
    "INTERNAL_ADMIN undefined -": "7a8e287037c32c8e",
    "INTERNAL_ADMIN undefined previous_year": "cba45a1b1b2bc883",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                    "serverExport": {
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "subsection": null,
                    },
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`dashboard spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "b534d8251e49145d",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "8ab2b1238d13c857",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "7cc2e5cf42891a83",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "ebf6ad64787d13a6",
    "CLIENT_VIEWER "junk" -": "577b8e89e8da2ede",
    "CLIENT_VIEWER "junk" previous_year": "52b516c882713636",
    "CLIENT_VIEWER "last_30_days" -": "7a8e287037c32c8e",
    "CLIENT_VIEWER "last_30_days" previous_year": "cba45a1b1b2bc883",
    "CLIENT_VIEWER "last_month" -": "7fa4c9361089b00f",
    "CLIENT_VIEWER "last_month" previous_year": "fcfccce3f5f79d83",
    "CLIENT_VIEWER ["last_30_days","x"] -": "77197bf5e14d1514",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "9c72fe9c9f02f56b",
    "CLIENT_VIEWER health": "7a8e287037c32c8e",
    "CLIENT_VIEWER undefined -": "7a8e287037c32c8e",
    "CLIENT_VIEWER undefined previous_year": "cba45a1b1b2bc883",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "b534d8251e49145d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "8ab2b1238d13c857",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "7cc2e5cf42891a83",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "ebf6ad64787d13a6",
    "INTERNAL_ADMIN "junk" -": "577b8e89e8da2ede",
    "INTERNAL_ADMIN "junk" previous_year": "52b516c882713636",
    "INTERNAL_ADMIN "last_30_days" -": "7a8e287037c32c8e",
    "INTERNAL_ADMIN "last_30_days" previous_year": "cba45a1b1b2bc883",
    "INTERNAL_ADMIN "last_month" -": "7fa4c9361089b00f",
    "INTERNAL_ADMIN "last_month" previous_year": "fcfccce3f5f79d83",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "77197bf5e14d1514",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "9c72fe9c9f02f56b",
    "INTERNAL_ADMIN health": "c62db1c4f426f57b",
    "INTERNAL_ADMIN undefined -": "7a8e287037c32c8e",
    "INTERNAL_ADMIN undefined previous_year": "cba45a1b1b2bc883",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                    "serverExport": {
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "subsection": null,
                    },
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal deep link, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "CLIENT_VIEWER "junk" -": "2cab47f142c8bd44",
    "CLIENT_VIEWER "junk" previous_year": "228cd2ad0a065653",
    "CLIENT_VIEWER "last_30_days" -": "a0e4f2523621d118",
    "CLIENT_VIEWER "last_30_days" previous_year": "60da3f39f56ac58d",
    "CLIENT_VIEWER "last_month" -": "10db3ce9f5b318da",
    "CLIENT_VIEWER "last_month" previous_year": "a004c09efa99fe90",
    "CLIENT_VIEWER ["last_30_days","x"] -": "75ee607dadf29451",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "a85561020cd29324",
    "CLIENT_VIEWER health": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined -": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "INTERNAL_ADMIN "junk" -": "2cab47f142c8bd44",
    "INTERNAL_ADMIN "junk" previous_year": "228cd2ad0a065653",
    "INTERNAL_ADMIN "last_30_days" -": "a0e4f2523621d118",
    "INTERNAL_ADMIN "last_30_days" previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "last_month" -": "10db3ce9f5b318da",
    "INTERNAL_ADMIN "last_month" previous_year": "a004c09efa99fe90",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "75ee607dadf29451",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "a85561020cd29324",
    "INTERNAL_ADMIN health": "4f567a492bb1b024",
    "INTERNAL_ADMIN undefined -": "a0e4f2523621d118",
    "INTERNAL_ADMIN undefined previous_year": "60da3f39f56ac58d",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal deep link, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "CLIENT_VIEWER "junk" -": "2cab47f142c8bd44",
    "CLIENT_VIEWER "junk" previous_year": "228cd2ad0a065653",
    "CLIENT_VIEWER "last_30_days" -": "a0e4f2523621d118",
    "CLIENT_VIEWER "last_30_days" previous_year": "60da3f39f56ac58d",
    "CLIENT_VIEWER "last_month" -": "10db3ce9f5b318da",
    "CLIENT_VIEWER "last_month" previous_year": "a004c09efa99fe90",
    "CLIENT_VIEWER ["last_30_days","x"] -": "75ee607dadf29451",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "a85561020cd29324",
    "CLIENT_VIEWER health": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined -": "a0e4f2523621d118",
    "CLIENT_VIEWER undefined previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "53694c7497aefa02",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "5b63e2778d937628",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "3b8c49c5eb21243e",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "128b5602b285f9ab",
    "INTERNAL_ADMIN "junk" -": "2cab47f142c8bd44",
    "INTERNAL_ADMIN "junk" previous_year": "228cd2ad0a065653",
    "INTERNAL_ADMIN "last_30_days" -": "a0e4f2523621d118",
    "INTERNAL_ADMIN "last_30_days" previous_year": "60da3f39f56ac58d",
    "INTERNAL_ADMIN "last_month" -": "10db3ce9f5b318da",
    "INTERNAL_ADMIN "last_month" previous_year": "a004c09efa99fe90",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "75ee607dadf29451",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "a85561020cd29324",
    "INTERNAL_ADMIN health": "4f567a492bb1b024",
    "INTERNAL_ADMIN undefined -": "a0e4f2523621d118",
    "INTERNAL_ADMIN undefined previous_year": "60da3f39f56ac58d",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                {
                  "key": null,
                  "props": {
                    "children": [
                      {
                        "key": null,
                        "props": {
                          "children": "Client",
                          "className": "text-sm font-bold uppercase tracking-widest text-text-muted",
                        },
                        "type": "p",
                      },
                      {
                        "key": null,
                        "props": {
                          "children": "Organic Social",
                          "className": "text-3xl font-extrabold uppercase text-white",
                        },
                        "type": "h1",
                      },
                    ],
                  },
                  "type": "div",
                },
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "value": "last_30_days",
                      },
                      "type": "PortalReportDateRange",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
              ],
              "className": "mb-6 flex items-end justify-between",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "className": "divider-full mb-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": null,
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "ReportSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
        ],
        "className": "mx-auto max-w-6xl px-8 py-12",
      },
      "type": "div",
    },
  },
}
`;

exports[`portal spa, new-client-shaped, no reportingMonths: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "beb5289dbdcfcc90",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "c82cb3dd001d20fb",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "0700d59a683c5f8b",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "2c28ff011374f25c",
    "CLIENT_VIEWER "junk" -": "9bf87ca0137b5a3f",
    "CLIENT_VIEWER "junk" previous_year": "a4b4c068ea0cfb19",
    "CLIENT_VIEWER "last_30_days" -": "70ac3a1e0801e930",
    "CLIENT_VIEWER "last_30_days" previous_year": "2e9896bd9b031edf",
    "CLIENT_VIEWER "last_month" -": "6e6088f6e828a31e",
    "CLIENT_VIEWER "last_month" previous_year": "069e654ea3f6b414",
    "CLIENT_VIEWER ["last_30_days","x"] -": "77fb67cec0822715",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "b72b3e249c22be77",
    "CLIENT_VIEWER undefined -": "70ac3a1e0801e930",
    "CLIENT_VIEWER undefined previous_year": "2e9896bd9b031edf",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "beb5289dbdcfcc90",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "c82cb3dd001d20fb",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "0700d59a683c5f8b",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "2c28ff011374f25c",
    "INTERNAL_ADMIN "junk" -": "9bf87ca0137b5a3f",
    "INTERNAL_ADMIN "junk" previous_year": "a4b4c068ea0cfb19",
    "INTERNAL_ADMIN "last_30_days" -": "70ac3a1e0801e930",
    "INTERNAL_ADMIN "last_30_days" previous_year": "2e9896bd9b031edf",
    "INTERNAL_ADMIN "last_month" -": "6e6088f6e828a31e",
    "INTERNAL_ADMIN "last_month" previous_year": "069e654ea3f6b414",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "77fb67cec0822715",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "b72b3e249c22be77",
    "INTERNAL_ADMIN undefined -": "70ac3a1e0801e930",
    "INTERNAL_ADMIN undefined previous_year": "2e9896bd9b031edf",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                    "serverExport": {
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "subsection": null,
                    },
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`portal spa, renaissance-shaped: returned tree is unchanged 1`] = `
{
  "digests": {
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" -": "beb5289dbdcfcc90",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-15" previous_year": "c82cb3dd001d20fb",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" -": "0700d59a683c5f8b",
    "CLIENT_VIEWER "custom:2026-08-01,2026-08-31" previous_year": "2c28ff011374f25c",
    "CLIENT_VIEWER "junk" -": "9bf87ca0137b5a3f",
    "CLIENT_VIEWER "junk" previous_year": "a4b4c068ea0cfb19",
    "CLIENT_VIEWER "last_30_days" -": "70ac3a1e0801e930",
    "CLIENT_VIEWER "last_30_days" previous_year": "2e9896bd9b031edf",
    "CLIENT_VIEWER "last_month" -": "6e6088f6e828a31e",
    "CLIENT_VIEWER "last_month" previous_year": "069e654ea3f6b414",
    "CLIENT_VIEWER ["last_30_days","x"] -": "77fb67cec0822715",
    "CLIENT_VIEWER ["last_30_days","x"] previous_year": "b72b3e249c22be77",
    "CLIENT_VIEWER undefined -": "70ac3a1e0801e930",
    "CLIENT_VIEWER undefined previous_year": "2e9896bd9b031edf",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" -": "beb5289dbdcfcc90",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-15" previous_year": "c82cb3dd001d20fb",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" -": "0700d59a683c5f8b",
    "INTERNAL_ADMIN "custom:2026-08-01,2026-08-31" previous_year": "2c28ff011374f25c",
    "INTERNAL_ADMIN "junk" -": "9bf87ca0137b5a3f",
    "INTERNAL_ADMIN "junk" previous_year": "a4b4c068ea0cfb19",
    "INTERNAL_ADMIN "last_30_days" -": "70ac3a1e0801e930",
    "INTERNAL_ADMIN "last_30_days" previous_year": "2e9896bd9b031edf",
    "INTERNAL_ADMIN "last_month" -": "6e6088f6e828a31e",
    "INTERNAL_ADMIN "last_month" previous_year": "069e654ea3f6b414",
    "INTERNAL_ADMIN ["last_30_days","x"] -": "77fb67cec0822715",
    "INTERNAL_ADMIN ["last_30_days","x"] previous_year": "b72b3e249c22be77",
    "INTERNAL_ADMIN undefined -": "70ac3a1e0801e930",
    "INTERNAL_ADMIN undefined previous_year": "2e9896bd9b031edf",
  },
  "representative": {
    "tree": {
      "key": null,
      "props": {
        "children": [
          {
            "key": null,
            "props": {
              "children": [
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "children": {
                      "key": null,
                      "props": {
                        "compareRange": null,
                        "dateRange": "last_30_days",
                      },
                      "type": "GA4DatePicker",
                    },
                    "fallback": null,
                  },
                  "type": "react.suspense",
                },
                null,
                null,
                {
                  "key": null,
                  "props": {
                    "clientName": "Client",
                    "pageTitle": "Organic Social",
                    "periodLabel": "Sep 5 – Oct 4, 2026",
                    "serverExport": {
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                      "subsection": null,
                    },
                  },
                  "type": "ExportPdfButton",
                },
              ],
              "logoUrl": null,
              "subtitle": "Client",
              "title": "Organic Social",
            },
            "type": "StickyReportHeader",
          },
          {
            "key": null,
            "props": {
              "className": "h-8",
            },
            "type": "div",
          },
          {
            "key": null,
            "props": {
              "children": {
                "key": "organic-social::last_30_days::",
                "props": {
                  "children": {
                    "key": null,
                    "props": {
                      "channel": null,
                      "clientSlug": "c",
                      "compareRange": null,
                      "dateRange": "last_30_days",
                    },
                    "type": "OrganicSocialReport",
                  },
                  "fallback": {
                    "key": null,
                    "props": {},
                    "type": "SectionSkeleton",
                  },
                },
                "type": "react.suspense",
              },
              "sectionName": "Organic Social",
            },
            "type": "ReportErrorBoundary",
          },
          null,
        ],
        "delayDuration": 150,
        "skipDelayDuration": 50,
      },
      "type": "TooltipProvider",
    },
  },
}
`;

exports[`renaissance-shaped: another section on the SPA routes is unchanged 1`] = `
{
  "dash": "f2b1ff469c439664",
  "portal": "5ba7f6ebaf26fb39",
}
`;
